--- a/diseno-grafico.html
+++ b/diseno-grafico.html
@@ -22,7 +22,8 @@
     <link rel="stylesheet" href="rs-plugin/css/typewriter.css">
 
     <link rel="icon" type="image/png" href="images/logos/icono.png">
-    <title>CreativosPlus | Agencia Digital </title>
+    <link rel="canonical" href="https://creativosplus.com/diseno-grafico">
+    <title>CreativosPlus | Diseño Grafico, Logos, Videos</title>
 
     <meta property="og:type" content="website"/>
     <meta property="og:description" content=""/>
@@ -45,7 +46,7 @@
     <meta name="audience" content="All">
     <meta name="Keywords" content="Creativos, Diseño web, agencia, Marketing, Aplicaciones, digital, diseño grafico, identidad, servicios, wordpress, paginas web, paginas, agencias, online, on-line, desarrollo web, precios de paginas web, diseño web en venezuela, diseño web en chile, agencias de marketing en venezuela, apps, plus, creativosplus, programacion web, identidad digital, emprendimiento, emprendimiento digital, paginas web profesionales, bajos costos, web"/>
     <meta NAME="HTTP.Language" CONTENT="Spanish">
-    <meta property="og:title" content="CreativosPlus | Agencia Digital"/>
+    <meta property="og:title" content="CreativosPlus | Diseño Grafico, Logos, videos"/>
     <meta property="og:site_name" content="CreativosPlus, Somos una empresa digital especializada en el desarrollo web, marketing digital y diseño grafico brindando soluciones digitales."/>
 
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-135366270-1"></script>
@@ -175,7 +176,7 @@
                                 <li>
                                     <a href="index.html">
                                         <div>
-                                            <img src="images/icons/spain.png" width="20" height="20" style="margin-right: 5px" alt="">
+                                            <img src="images/icons/spain.png" width="20" height="20" style="margin-right: 5px" alt="Español">
                                             Español
                                         </div>
                                     </a>
@@ -183,7 +184,7 @@
                                 <li>
                                     <a href="us/index.html">
                                         <div>
-                                            <img src="images/icons/usa.png" width="20" height="20" style="margin-right: 5px" alt="">
+                                            <img src="images/icons/usa.png" width="20" height="20" style="margin-right: 5px" alt="Ingles">
                                             Ingles
                                         </div>
                                     </a>
@@ -200,7 +201,7 @@
 			<div id="welcome" class="rev_slider fullscreenbanner" style="display:none;" data-version="5.4.5.2">
                 <ul>
                     <li data-index="rs-240" data-transition="fade" data-slotamount="default" data-hideafterloop="0" data-hideslideonmobile="off"  data-easein="Power4.easeInOut" data-easeout="Power4.easeInOut" data-masterspeed="1000"  data-rotate="0"  data-saveperformance="off"  data-title="Slide" data-param1="" data-param2="" data-param3="" data-param4="" data-param5="" data-param6="" data-param7="" data-param8="" data-param9="" data-param10="" data-description="">
-                        <img src="images/servicios/DISEÑO/slider.jpg"  alt=""  data-bgposition="center center" data-bgfit="cover" data-bgparallax="4" class="rev-slidebg" data-no-retina>
+                        <img src="images/servicios/DISEÑO/slider.jpg"  alt="Diseño grafico"  data-bgposition="center center" data-bgfit="cover" data-bgparallax="4" class="rev-slidebg" data-no-retina>
                         <div class="tp-caption tp-shape tp-shapewrapper"
                             id="slide-240-layer-7"
                             data-x="['center','center','center','center']" 
@@ -241,7 +242,7 @@
                             data-paddingbottom="[0,0,0,0]"
                             data-paddingleft="[0,0,0,0]"
                             style="z-index: 8;">
-                            <img src="images/slider/DISEÑO GRAFICO.png" alt="" data-ww="['700px','700px','700px','700px']" data-hh="['150px','150px','150px','150px']" data-no-retina>
+                            <img src="images/slider/DISEÑO GRAFICO.png" alt="Diseño Grafico" data-ww="['700px','700px','700px','700px']" data-hh="['150px','150px','150px','150px']" data-no-retina>
                         </div>
                         <div class="tp-caption"
                             id="slide-240-layer-2"
@@ -264,7 +265,7 @@
                             data-paddingbottom="[0,0,0,0]"
                             data-paddingleft="[0,0,0,0]"
                             style="z-index: 8; min-width: 640px; max-width: 640px; white-space: normal; font-size: 26px; line-height: 35px; font-weight: 300; color: #ffffff; letter-spacing: px;font-family:Poppins;">
-                            Say Hello to the new web presence of your internet company. Usable, Customizable and Beautiful!
+                            Diseñamos identidad para tu negocio de manera unica y efectiva!
                         </div>
                         <div class="d-none d-sm-block tp-caption rev-btn tc-btnshadow tp-rs-menulink btn-verde button button-3d button-reveal button-xlarge tright button-rounded" 
                             target="_self"			 
@@ -327,7 +328,7 @@
                 <i class="icon-instagram2"></i>
                 <i class="icon-instagram2"></i>
             </a>
-            <a target="_blank" href="https://api.whatsapp.com/send?phone=584145069150&text=Hola,%20quiero%20contactarlos" class="social-icon si-spotify si-colored" data-animate="bounceInLeft">
+            <a rel="nofollow" target="_blank" href="https://api.whatsapp.com/send?phone=584145069150&text=Hola,%20quiero%20contactarlos" class="social-icon si-spotify si-colored" data-animate="bounceInLeft">
                 <i class="icon-whatsapp"></i>
                 <i class="icon-whatsapp"></i>
             </a>
@@ -336,7 +337,7 @@
             <div id="section-nextgen" class="page-section bottommargin-lg topmargin">
                 <div class="row clearfix">
                     <div class="col-lg-5 center">
-                        <img src="images/servicios/DISEÑO/1.png" alt="NextGen Framework" data-animate="fadeInLeft">
+                        <img src="images/servicios/DISEÑO/1.png" alt="Logotipos" data-animate="fadeInLeft">
                     </div>
                     <div class="col-lg-7">
                         <div class="topmargin-lg d-none d-lg-block"></div>
@@ -367,7 +368,7 @@
                         </a>
                     </div>
                     <div class="col-lg-5 center">
-                        <img style="margin-top: 70px;" src="images/servicios/DISEÑO/2.png" alt="Stunning Graphics" data-animate="fadeInRight">
+                        <img style="margin-top: 70px;" src="images/servicios/DISEÑO/2.png" alt="Identidad" data-animate="fadeInRight">
                     </div>
                 </div>
             </div>
@@ -377,7 +378,7 @@
         <div id="section-nextgen" class="page-section  topmargin" style="background: url('images/3.jpg') no-repeat top center; background-size: cover; padding: 80px 0 70px;">
             <div class="row clearfix">
                 <div class="col-lg-5 center">
-                    <img src="images/servicios/DISEÑO/3-3.png" alt="NextGen Framework" data-animate="fadeInLeft">
+                    <img src="images/servicios/DISEÑO/3-3.png" alt="diseño grafico" data-animate="fadeInLeft">
                 </div>
                 <div class="col-lg-7 container clearfix ">
                     <div class="topmargin-lg d-none d-lg-block"></div>
@@ -499,7 +500,7 @@
         </div>
         <div id="copyrights">
             <div class="container center clearfix texto-blanco">
-                Copyrights &copy; 2019. Todos los derechos son reservados por <a class="texto-blanco" href="index.html">Creativosplus</a>.
+                Copyrights &copy; 2019. Todos los derechos son reservados por <a class="texto-blanco" href="index.html">Creativos+</a>.
             </div>
         </div>
     </footer>
