--- a/nosotros.html
+++ b/nosotros.html
@@ -25,7 +25,7 @@
    <link rel="icon" type="image/png" href="images/logos/icono.png">
    <title>CreativosPlus | Conoce más sobre nosotros </title>
 
-   <link rel="canonical" href="http://www.creativosplus.com/Conocenos/" />
+   <link rel="canonical" href="http://www.creativosplus.com/Conocenos/"/>
 
    <meta property="og:type" content="website"/>
    <meta property="og:description" content=""/>
@@ -42,7 +42,7 @@
    <meta name="Classification" content="commercial">
    <meta name="Usergroup" content="Public">
    <meta content="yes" http-equiv="public">
-   <meta property="og:url" content="https://creativosplus.com"/>
+   <meta property="og:url" content="https://creativosplus.com/Conocenos"/>
    <meta name="googlebot" content="all">
    <meta NAME="rating" CONTENT="General">
    <meta name="audience" content="All">
@@ -178,7 +178,7 @@
                         <li>
                            <a href="index.html">
                               <div>
-                                 <img src="images/icons/spain.png" width="20" height="20" style="margin-right: 5px" alt="">
+                                 <img src="images/icons/spain.png" width="20" height="20" style="margin-right: 5px" alt="Español">
                                  Español
                               </div>
                            </a>
@@ -186,7 +186,7 @@
                         <li>
                            <a href="us/index.html">
                               <div>
-                                 <img src="images/icons/usa.png" width="20" height="20" style="margin-right: 5px" alt="">
+                                 <img src="images/icons/usa.png" width="20" height="20" style="margin-right: 5px" alt="Ingles">
                                  Ingles
                               </div>
                            </a>
@@ -203,7 +203,7 @@
 			<div id="welcome" class="rev_slider fullscreenbanner" style="display:none;" data-version="5.4.5.2">
                 <ul>
                     <li data-index="rs-240" data-transition="fade" data-slotamount="default" data-hideafterloop="0" data-hideslideonmobile="off"  data-easein="Power4.easeInOut" data-easeout="Power4.easeInOut" data-masterspeed="1000"  data-rotate="0"  data-saveperformance="off"  data-title="Slide" data-param1="" data-param2="" data-param3="" data-param4="" data-param5="" data-param6="" data-param7="" data-param8="" data-param9="" data-param10="" data-description="">
-                        <img src="images/slider/hello-world.jpg"  alt=""  data-bgposition="center center" data-bgfit="cover" data-bgparallax="4" class="rev-slidebg" data-no-retina>
+                        <img src="images/slider/hello-world.jpg"  alt="Creativosplus"  data-bgposition="center center" data-bgfit="cover" data-bgparallax="4" class="rev-slidebg" data-no-retina>
                         <div class="rs-background-video-layer"
                            data-forcerewind="on"
                            data-volume="mute"
@@ -343,7 +343,7 @@
             <i class="icon-instagram2"></i>
             <i class="icon-instagram2"></i>
          </a>
-         <a target="_blank" href="https://api.whatsapp.com/send?phone=584145069150&text=Hola,%20quiero%20contactarlos" class="social-icon si-spotify si-colored" data-animate="bounceInLeft">
+         <a rel="nofollow" target="_blank" href="https://api.whatsapp.com/send?phone=584145069150&text=Hola,%20quiero%20contactarlos" class="social-icon si-spotify si-colored" data-animate="bounceInLeft">
             <i class="icon-whatsapp"></i>
             <i class="icon-whatsapp"></i>
          </a>
@@ -355,7 +355,7 @@
                   <div class="heading-block topmargin center" style="margin-bottom: 0 !important;">
                      <h2>Conoce más de Nosotros</h2>
                   </div>
-                  <p class="lead text-justify">En CreativosPlus construimos sitios web de alta calidad, con diseños únicos, innovadores y amigables para tus clientes. Somos ese PLUS que hará de tu sitio web una solución efectiva a tu estrategia digital.</p>
+                  <p class="lead text-justify">En CreativosPlus construimos <strong>sitios web</strong> de alta calidad, con diseños únicos, innovadores y amigables para tus clientes. Somos ese PLUS que hará de tu sitio web una solución efectiva a tu estrategia digital.</p>
                   <a class="btn-verde button button-3d button-reveal button-xlarge tright button-rounded" href="" data-scrollto="#footer" data-offset="160" data-easing="easeInOutExpo" data-speed="1200">
                      <i class="icon-line-arrow-right"></i>
                      <span>Contáctanos</span>
@@ -378,7 +378,7 @@
                         </a>
                      </div>
                      <h3 class="texto-verde">Expertos</h3>
-                     <p class="lead text-justify" style="font-size: 18px !important;">Aprendemos a visualizar lo que quieres para tu negocio en el mundo digital.</p>
+                     <p class="lead text-justify" style="font-size: 18px !important;">Aprendemos a visualizar lo que quieres para tu <strong>negocio</strong> en el mundo digital.</p>
                   </div>
                </div>
                <div class="col-lg-3 col-sm-6">
@@ -389,7 +389,7 @@
                         </a>
                      </div>
                      <h3 class="texto-verde">Creativos</h3>
-                     <p class="lead text-justify" style="font-size: 18px !important;">Transformamos tu idea en un diseño  unico para tu identidad web.</p>
+                     <p class="lead text-justify" style="font-size: 18px !important;">Transformamos tu idea en un <strong>diseño unico</strong> para tu identidad web.</p>
                   </div>
                </div>
                <div class="col-lg-3 col-sm-6">
@@ -400,7 +400,7 @@
                         </a>
                      </div>
                      <h3 class="texto-verde">Profesionales</h3>
-                     <p class="lead text-justify" style="font-size: 18px !important;">Contamos con una vasta experiencia en diseño de páginas web a su medida.</p>
+                     <p class="lead text-justify" style="font-size: 18px !important;">Contamos con una vasta experiencia en diseño de <strong>páginas web</strong> a su medida.</p>
                   </div>
                </div>
                <div class="col-lg-3 col-sm-6">
@@ -424,7 +424,7 @@
                   <div class="heading-block topmargin center" style="margin-bottom: 0 !important;">
                         <h2>Nuestra Misión</h2>
                   </div>
-                  <p class="lead text-justify">En CreativosPlus construimos sitios web de alta calidad, con diseños únicos, innovadores y amigables para tus clientes. Somos ese PLUS que hará de tu sitio web una solución efectiva a tu estrategia digital.</p>
+                  <p class="lead text-justify">Ayudar a las personas que confíen en nosotros a encontrar la <strong>identidad</strong> en su negocio y poder brindarle apoyo a cada persona a nivel internacional </p>
                   <a class="fright btn-verde button button-3d button-reveal button-xlarge tright button-rounded" href="" data-scrollto="#footer" data-offset="160" data-easing="easeInOutExpo" data-speed="1200">
                      <i class="icon-line-arrow-right"></i>
                      <span>Contáctanos</span>
@@ -433,68 +433,70 @@
             </div>
          </div>
       </div>
-      <div class="section noborder nomargin" id="testimonios" style="background: url('images/3.jpg') no-repeat top center; background-size: cover; padding: 80px 0 70px;">
-         <div class="container">
-            <div class="heading-block center">
-               <h2>Clientes que han confiado en nosotros</h2>
-            </div>
-            <div id="oc-testi" class="owl-carousel testimonials-carousel carousel-widget clearfix" data-margin="0" data-pagi="true" data-loop="true" data-center="true" data-autoplay="5000" data-items-sm="1" data-items-md="2" data-items-xl="3">
-               <div class="oc-item">
-                  <div class="testimonial">
-                     <div class="testi-content">
-                        <p>Incidunt deleniti blanditiis quas aperiam recusandae consequatur ullam quibusdam cum libero illo rerum repellendus!</p>
-                        <div class="testi-meta">
-                           John Doe
-                           <span>XYZ Inc.</span>
+      <div class="section nomargin noborder" id="testimonios" style="background: url('images/3.jpg') no-repeat top center; background-size: cover; padding: 80px 0 70px;">
+            <div class="container clearfix">
+                <div class="heading-block center">
+                    <h2>Clientes que han confiado en nosotros</h2>
+                </div>
+                <div id="oc-testi" class="owl-carousel testimonials-carousel carousel-widget clearfix" data-margin="0" data-pagi="true" data-loop="true" data-center="true" data-autoplay="5000" data-items-sm="1" data-items-md="2" data-items-xl="3">
+                    <div class="oc-item">
+                        <div class="testimonial">
+                            <div class="testi-content">
+                                <p>Muy buen trabajo y atencion que recibi durante todo el proceso, gracias a creativosplus pude conseguir lo que queria.</p>
+                                <div class="testi-meta">
+                                    Osman Orozco
+                                    <span><a target="_black" href="http://petroleumblg.com">Blg Petromleum</a></span>
+                                </div>
+                            </div>
                         </div>
-                     </div>
-                  </div>
-               </div>
-               <div class="oc-item">
-                  <div class="testimonial">
-                     <div class="testi-content">
-                        <p>Natus voluptatum enim quod necessitatibus quis expedita harum provident eos obcaecati id culpa corporis molestias.</p>
-                        <div class="testi-meta">
-                           Collis Ta'eed
-                           <span>Envato Inc.</span>
+                    </div>
+                    <div class="oc-item">
+                        <div class="testimonial">
+                            <div class="testi-content">
+                                <p>Muy contenta con mi pagina web, gracias por tan buen servicio.</p>
+                                <div class="testi-meta">
+                                    Rebeca Alvarez
+                                    <span><a target="_black" href="http://addictivebeautynow.com">Adiictive beauty</a></span>
+                                </div>
+                            </div>
                         </div>
-                     </div>
-                  </div>
-               </div>
-               <div class="oc-item">
-                  <div class="testimonial">
-                     <div class="testi-content">
-                        <p>Natus voluptatum enim quod necessitatibus quis expedita harum provident eos obcaecati id culpa corporis molestias.</p>
-                        <div class="testi-meta">
-                           Collis Ta'eed
-                           <span>Envato Inc.</span>
+                    </div>
+                    <div class="oc-item">
+                        <div class="testimonial">
+                            <div class="testi-content">
+                                <p>Excelente atencion de parte de creativosplus, lograron captar lo que yo queria.</p>
+                                <div class="testi-meta">
+                                    Angel
+                                    <span><a target="_black" href="http://jjcustomsolution.com">jjcustomsolution</a></span>
+                                </div>
+                            </div>
                         </div>
-                     </div>
-                  </div>
-               </div>
-               <div class="oc-item">
-                  <div class="testimonial">
-                     <div class="testi-content">
-                        <p>Natus voluptatum enim quod necessitatibus quis expedita harum provident eos obcaecati id culpa corporis molestias.</p>
-                        <div class="testi-meta">
-                           Mary Jane
-                           <span>Google Inc.</span>
+                    </div>
+                    <div class="oc-item">
+                        <div class="testimonial">
+                            <div class="testi-content">
+                                <p>Entendieron mi idea de diseño y superaron mis expectativas. Tengo el logo ideal para mi negocio.</p>
+                                <div class="testi-meta">
+                                    Andrea Pacheco
+                                    <span><a target="_black" href="https://www.instagram.com/luxuryfoxlingerie/">Luxury Fox</a></span>
+                                </div>
+                            </div>
                         </div>
-                     </div>
-                  </div>
-               </div>
-               <div class="oc-item">
-                  <div class="testimonial">
-                     <div class="testi-content">
-                        <p>Natus voluptatum enim quod necessitatibus quis expedita harum provident eos obcaecati id culpa corporis molestias.</p>
-                        <div class="testi-meta">
-                           Steve Jobs
-                           <span>Apple Inc.</span>
+                    </div>
+                    <div class="oc-item">
+                        <div class="testimonial">
+                            <div class="testi-content">
+                                <p>Adaptaron mi tienda virtual como lo esperabamos nos asesoraron en todo lo que necesitabamos.</p>
+                                <div class="testi-meta">
+                                    Jose
+                                <span><a target="_black" href="https://weare-yourfriends.com">Wayf</a></span>
+                                </div>
+                            </div>
                         </div>
-                     </div>
-                  </div>
-               </div>
-            </div>
+                    </div>
+                </div>
+            </div>			
+        </div>
             <!-- <div class="line"></div>
             <div class="heading-block center">
                <h2>¿Tienes dudas? mira las Preguntas Frecuentes</h2>
