--- a/seo.html
+++ b/seo.html
@@ -22,7 +22,7 @@
     <link rel="stylesheet" href="rs-plugin/css/typewriter.css">
 
     <link rel="icon" type="image/png" href="images/logos/icono.png">
-    <title>CreativosPlus | Agencia Digital </title>
+    <title>CreativosPlus | Optimizacion web, Keywords, analitica web </title>
 
     <meta property="og:type" content="website"/>
     <meta property="og:description" content=""/>
@@ -39,7 +39,7 @@
     <meta name="Classification" content="commercial">
     <meta name="Usergroup" content="Public">
     <meta content="yes" http-equiv="public">
-    <meta property="og:url" content="https://creativosplus.com"/>
+    <meta property="og:url" content="https://creativosplus.com/Optimizacion-web"/>
     <meta name="googlebot" content="all">
     <meta NAME="rating" CONTENT="General">
     <meta name="audience" content="All">
@@ -47,7 +47,7 @@
     <meta NAME="HTTP.Language" CONTENT="Spanish">
     <meta property="og:title" content="CreativosPlus | Agencia Digital"/>
     <meta property="og:site_name" content="CreativosPlus, Somos una empresa digital especializada en el desarrollo web, marketing digital y diseño grafico brindando soluciones digitales."/>
-
+    <link rel="canonical" href="https://creativosplus.com/Optimizacion-web">
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-135366270-1"></script>
     <script>
 
@@ -327,7 +327,7 @@
                 <i class="icon-instagram2"></i>
                 <i class="icon-instagram2"></i>
             </a>
-            <a target="_blank" href="https://api.whatsapp.com/send?phone=584145069150&text=Hola,%20quiero%20contactarlos" class="social-icon si-spotify si-colored" data-animate="bounceInLeft">
+            <a rel="nofollow" target="_blank" href="https://api.whatsapp.com/send?phone=584145069150&text=Hola,%20quiero%20contactarlos" class="social-icon si-spotify si-colored" data-animate="bounceInLeft">
                 <i class="icon-whatsapp"></i>
                 <i class="icon-whatsapp"></i>
             </a>
@@ -336,7 +336,7 @@
             <div id="section-nextgen" class="page-section bottommargin-lg topmargin">
                 <div class="row clearfix">
                     <div class="col-lg-5 center">
-                        <img src="images/servicios/SEO/1.png" alt="NextGen Framework" data-animate="fadeInLeft">
+                        <img src="images/servicios/SEO/1.png" alt="Optimización web" data-animate="fadeInLeft">
                     </div>
                     <div class="col-lg-7">
                         <div class="topmargin-lg d-none d-lg-block"></div>
@@ -367,7 +367,7 @@
                         </a>
                     </div>
                     <div class="col-lg-5 center">
-                        <img src="images/servicios/SEO/2.png" alt="Stunning Graphics" data-animate="fadeInRight">
+                        <img src="images/servicios/SEO/2.png" alt="Keywords" data-animate="fadeInRight">
                     </div>
                 </div>
             </div>
