--- a/diseno-web.html
+++ b/diseno-web.html
@@ -20,9 +20,10 @@
     <link rel="stylesheet" href="rs-plugin/css/navigation.css">
     <link rel="stylesheet" href="rs-plugin/css/revolution.addon.particles.css">
     <link rel="stylesheet" href="rs-plugin/css/typewriter.css">
+    <link rel="canonical" href="https://creativosplus.com/diseno-web">
 
     <link rel="icon" type="image/png" href="images/logos/icono.png">
-    <title>CreativosPlus | Agencia Digital </title>
+    <title>CreativosPlus | Diseño web, Responsive, identidad web</title>
 
     <meta property="og:type" content="website"/>
     <meta property="og:description" content=""/>
@@ -39,7 +40,7 @@
     <meta name="Classification" content="commercial">
     <meta name="Usergroup" content="Public">
     <meta content="yes" http-equiv="public">
-    <meta property="og:url" content="https://creativosplus.com"/>
+    <meta property="og:url" content="https://creativosplus.com/diseno-web"/>
     <meta name="googlebot" content="all">
     <meta NAME="rating" CONTENT="General">
     <meta name="audience" content="All">
@@ -175,7 +176,7 @@
                                 <li>
                                     <a href="index.html">
                                         <div>
-                                            <img src="images/icons/spain.png" width="20" height="20" style="margin-right: 5px" alt="">
+                                            <img src="images/icons/spain.png" width="20" height="20" style="margin-right: 5px" alt="Español">
                                             Español
                                         </div>
                                     </a>
@@ -183,7 +184,7 @@
                                 <li>
                                     <a href="us/index.html">
                                         <div>
-                                            <img src="images/icons/usa.png" width="20" height="20" style="margin-right: 5px" alt="">
+                                            <img src="images/icons/usa.png" width="20" height="20" style="margin-right: 5px" alt="Ingles">
                                             Ingles
                                         </div>
                                     </a>
@@ -200,7 +201,7 @@
 			<div id="welcome" class="rev_slider fullscreenbanner" style="display:none;" data-version="5.4.5.2">
                 <ul>
                     <li data-index="rs-240" data-transition="fade" data-slotamount="default" data-hideafterloop="0" data-hideslideonmobile="off"  data-easein="Power4.easeInOut" data-easeout="Power4.easeInOut" data-masterspeed="1000"  data-rotate="0"  data-saveperformance="off"  data-title="Slide" data-param1="" data-param2="" data-param3="" data-param4="" data-param5="" data-param6="" data-param7="" data-param8="" data-param9="" data-param10="" data-description="">
-                        <img src="images/servicios/WEB/slider.jpg"  alt=""  data-bgposition="center center" data-bgfit="cover" data-bgparallax="4" class="rev-slidebg" data-no-retina>
+                        <img src="images/servicios/WEB/slider.jpg"  alt="diseño Web"  data-bgposition="center center" data-bgfit="cover" data-bgparallax="4" class="rev-slidebg" data-no-retina>
                         <div class="tp-caption tp-shape tp-shapewrapper"
                             id="slide-240-layer-7"
                             data-x="['center','center','center','center']" 
@@ -241,7 +242,7 @@
                             data-paddingbottom="[0,0,0,0]"
                             data-paddingleft="[0,0,0,0]"
                             style="z-index: 8;">
-                            <img src="images/slider/DISEÑO WEB.png" alt="" data-ww="['700px','700px','700px','450px']" data-hh="['150px','150px','150px','115px']" data-no-retina>
+                            <img src="images/slider/DISEÑO WEB.png" alt="web" data-ww="['700px','700px','700px','450px']" data-hh="['150px','150px','150px','115px']" data-no-retina>
                         </div>
                         <div class="tp-caption"
                             id="slide-240-layer-2"
@@ -327,7 +328,7 @@
                 <i class="icon-instagram2"></i>
                 <i class="icon-instagram2"></i>
             </a>
-            <a target="_blank" href="https://api.whatsapp.com/send?phone=584145069150&text=Hola,%20quiero%20contactarlos" class="social-icon si-spotify si-colored" data-animate="bounceInLeft">
+            <a rel="nofollow" target="_blank" href="https://api.whatsapp.com/send?phone=584145069150&text=Hola,%20quiero%20contactarlos" class="social-icon si-spotify si-colored" data-animate="bounceInLeft">
                 <i class="icon-whatsapp"></i>
                 <i class="icon-whatsapp"></i>
             </a>
@@ -336,7 +337,7 @@
             <div id="section-nextgen" class="page-section bottommargin-lg topmargin">
                 <div class="row clearfix">
                     <div class="col-lg-6">
-                        <img src="images/servicios/WEB/1.png" alt="NextGen Framework" data-animate="fadeInLeft">
+                        <img src="images/servicios/WEB/1.png" alt="servicios web" data-animate="fadeInLeft">
                     </div>
                     <div class="col-lg-6">
                         <div class="topmargin-lg d-none d-lg-block"></div>
@@ -367,7 +368,7 @@
                         </a>
                     </div>
                     <div class="col-lg-6 center">
-                        <img src="images/servicios/WEB/2.png" alt="telefono" data-animate="fadeInRight">
+                        <img src="images/servicios/WEB/2.png" alt="responsive web" data-animate="fadeInRight">
                     </div>
                 </div>
             </div>
@@ -466,11 +467,11 @@
                                         <div class="footer-big-contacts texto-blanco">
                                             <i class="icon-whatsapp"></i>
                                             <span>WhatsApp:</span>
-                                            <a class="texto-blanco" target="_blank" href="https://api.whatsapp.com/send?phone=584245853827&text=Hola,%20quiero%20contactarlos">
+                                            <a rel="nofollow" class="texto-blanco" target="_blank" href="https://api.whatsapp.com/send?phone=584245853827&text=Hola,%20quiero%20contactarlos">
                                                 (+58) 4245853827
                                             </a>
                                             |
-                                            <a class="texto-blanco" target="_blank" href="https://api.whatsapp.com/send?phone=584145069150&text=Hola,%20quiero%20contactarlos">
+                                            <a rel="nofollow" class="texto-blanco" target="_blank" href="https://api.whatsapp.com/send?phone=584145069150&text=Hola,%20quiero%20contactarlos">
                                                 (+58) 4145069150
                                             </a>
                                         </div>
