--- a/marketing.html
+++ b/marketing.html
@@ -175,7 +175,7 @@
                                 <li>
                                     <a href="index.html">
                                         <div>
-                                            <img src="images/icons/spain.png" width="20" height="20" style="margin-right: 5px" alt="">
+                                            <img src="images/icons/spain.png" width="20" height="20" style="margin-right: 5px" alt="Español">
                                             Español
                                         </div>
                                     </a>
@@ -183,7 +183,7 @@
                                 <li>
                                     <a href="us/index.html">
                                         <div>
-                                            <img src="images/icons/usa.png" width="20" height="20" style="margin-right: 5px" alt="">
+                                            <img src="images/icons/usa.png" width="20" height="20" style="margin-right: 5px" alt="Ingles">
                                             Ingles
                                         </div>
                                     </a>
@@ -200,7 +200,7 @@
 			<div id="welcome" class="rev_slider fullscreenbanner" style="display:none;" data-version="5.4.5.2">
                 <ul>
                     <li data-index="rs-240" data-transition="fade" data-slotamount="default" data-hideafterloop="0" data-hideslideonmobile="off"  data-easein="Power4.easeInOut" data-easeout="Power4.easeInOut" data-masterspeed="1000"  data-rotate="0"  data-saveperformance="off"  data-title="Slide" data-param1="" data-param2="" data-param3="" data-param4="" data-param5="" data-param6="" data-param7="" data-param8="" data-param9="" data-param10="" data-description="">
-                        <img src="images/servicios/MARKETING/slider.jpg"  alt=""  data-bgposition="center center" data-bgfit="cover" data-bgparallax="4" class="rev-slidebg" data-no-retina>
+                        <img src="images/servicios/MARKETING/slider.jpg"  alt="Marketing digital"  data-bgposition="center center" data-bgfit="cover" data-bgparallax="4" class="rev-slidebg" data-no-retina>
                         <div class="tp-caption tp-shape tp-shapewrapper"
                             id="slide-240-layer-7"
                             data-x="['center','center','center','center']" 
@@ -241,7 +241,7 @@
                             data-paddingbottom="[0,0,0,0]"
                             data-paddingleft="[0,0,0,0]"
                             style="z-index: 8;">
-                            <img src="images/slider/marketing.png" alt="" data-ww="['900px','900px','900px','900px']" data-hh="['150px','150px','150px','150px']" data-no-retina>
+                            <img src="images/slider/marketing.png" alt="Marketing en creativosplus" data-ww="['900px','900px','900px','900px']" data-hh="['150px','150px','150px','150px']" data-no-retina>
                         </div>
                         <div class="tp-caption"
                             id="slide-240-layer-2"
@@ -327,7 +327,7 @@
                 <i class="icon-instagram2"></i>
                 <i class="icon-instagram2"></i>
             </a>
-            <a target="_blank" href="https://api.whatsapp.com/send?phone=584145069150&text=Hola,%20quiero%20contactarlos" class="social-icon si-spotify si-colored" data-animate="bounceInLeft">
+            <a rel="nofollow" target="_blank" href="https://api.whatsapp.com/send?phone=584145069150&text=Hola,%20quiero%20contactarlos" class="social-icon si-spotify si-colored" data-animate="bounceInLeft">
                 <i class="icon-whatsapp"></i>
                 <i class="icon-whatsapp"></i>
             </a>
@@ -336,7 +336,7 @@
             <div id="section-nextgen" class="page-section bottommargin-lg topmargin">
                 <div class="row clearfix">
                     <div class="col-lg-5 center">
-                        <img src="images/servicios/MARKETING/1.png" alt="NextGen Framework" data-animate="fadeInLeft">
+                        <img src="images/servicios/MARKETING/1.png" alt="Marketing digital" data-animate="fadeInLeft">
                     </div>
                     <div class="col-lg-7">
                         <div class="topmargin-lg d-none d-lg-block"></div>
@@ -367,7 +367,7 @@
                         </a>
                     </div>
                     <div class="col-lg-5 center">
-                        <img src="images/servicios/MARKETING/2.png" alt="Stunning Graphics" data-animate="fadeInRight">
+                        <img src="images/servicios/MARKETING/2.png" alt="Social media" data-animate="fadeInRight">
                     </div>
                 </div>
             </div>
