--- a/nosotros.html
+++ b/nosotros.html
@@ -370,7 +370,7 @@
                <h2>¿Por que elegirnos?</h2>
             </div>
             <div class="row">
-               <div class="col-lg-3 col-sm-6">
+               <div class="col-lg-3 col-sm-6 mt-5">
                   <div class="feature-box fbox-center fbox-effect">
                      <div class="fbox-icon">
                         <a href="#">
@@ -381,7 +381,7 @@
                      <p class="lead text-justify" style="font-size: 18px !important;">Aprendemos a visualizar lo que quieres para tu <strong>negocio</strong> en el mundo digital.</p>
                   </div>
                </div>
-               <div class="col-lg-3 col-sm-6">
+               <div class="col-lg-3 col-sm-6 mt-5">
                   <div class="feature-box fbox-center fbox-effect">
                      <div class="fbox-icon">
                         <a href="#">
@@ -392,7 +392,7 @@
                      <p class="lead text-justify" style="font-size: 18px !important;">Transformamos tu idea en un <strong>diseño unico</strong> para tu identidad web.</p>
                   </div>
                </div>
-               <div class="col-lg-3 col-sm-6">
+               <div class="col-lg-3 col-sm-6 mt-5">
                   <div class="feature-box fbox-center fbox-effect">
                      <div class="fbox-icon">
                         <a href="#">
@@ -403,7 +403,7 @@
                      <p class="lead text-justify" style="font-size: 18px !important;">Contamos con una vasta experiencia en diseño de <strong>páginas web</strong> a su medida.</p>
                   </div>
                </div>
-               <div class="col-lg-3 col-sm-6">
+               <div class="col-lg-3 col-sm-6 mt-5">
                   <div class="feature-box fbox-center fbox-effect">
                      <div class="fbox-icon">
                         <a href="#">
@@ -420,7 +420,7 @@
                <div class="col-lg-6">
                   <img src="images/nosotros/2..jpg" style="position: relative; top: 50px; " data-animate="fadeInLeft" data-delay="100" alt="mision">
                </div>
-               <div class="col-lg-6">
+               <div class="col-lg-6 mt-5">
                   <div class="heading-block topmargin center" style="margin-bottom: 0 !important;">
                         <h2>Nuestra Misión</h2>
                   </div>
