--- a/seo.html
+++ b/seo.html
@@ -349,9 +349,9 @@
                             <span>Contáctanos</span>
                         </a>
                     </div>
+                    <div class="line"></div>
                 </div>
             </div>
-            <div class="line"></div>
             <div class="clear"></div>
             <div id="section-stunning-graphics" class="page-section topmargin bottommargin-lg">
                 <div class="row clearfix">
@@ -369,10 +369,10 @@
                     <div class="col-lg-5 center">
                         <img src="images/servicios/SEO/2.png" alt="Keywords" data-animate="fadeInRight">
                     </div>
+                    <div class="line"></div>
                 </div>
             </div>
         </div>
-        <div class="line"></div>
         <div class="clear"></div>
         <div id="section-secured-solutions" class="nomargin page-section section nopadding topmargin-sm" style="background: url(images/3.jpg) left bottom / 100% no-repeat; height: 400px;" data-height-xl="700" data-height-lg="700" data-height-md="450" data-height-sm="450" data-height-xs="450">
             <div class="container clearfix">
@@ -391,8 +391,8 @@
                     </div>
                 </div>
             </div>
-            <div class="video-wrap container" style="position: relative; height: 100%; z-index: 1; margin-top:-300px;  ">
-                <div class="video-overlay d-none d-lg-block fadeInLeft animated" style="background: url('images/servicios/seo/3-3.png') no-repeat left top; background-size: auto 100%;" data-animate="fadeInLeft"></div>
+            <div class="video-wrap" style="position: absolute; height: 100%; z-index: 1;">
+                <div class="video-overlay d-none d-lg-block" style="background: url('images/servicios/seo/3-3.png') no-repeat left top; background-size: auto 100%;" data-animate="fadeInLeft"></div>
             </div>
         </div>
     </section>
