--- a/diseno-web.html
+++ b/diseno-web.html
@@ -371,26 +371,29 @@
                         <img src="images/servicios/WEB/2.png" alt="responsive web" data-animate="fadeInRight">
                     </div>
                 </div>
+                <div class="line"></div>
             </div>
         </div>
-        <div class="line"></div>
         <div class="clear"></div>
-        <div id="section-nextgen" class="page-section  " style="background: url('images/3.jpg') no-repeat top center; background-size: cover; padding: 80px 0 70px;">
-            <div class="row clearfix">
-                <div class="col-lg-6 center">
-                    <img src="images/servicios/web/3-3.png" alt="identidad Web" data-animate="fadeInLeft">
-                </div>
-                <div class="col-lg-6 container clearfix ">
-                    <div class="emphasis-title bottommargin-sm">
-                        <h2 style="font-size: 42px;" class="font-body ls1 t500">Re-diseño Web</h2>
+        <div id="section-secured-solutions" class="nomargin page-section section nopadding topmargin-sm" style="background: url(images/3.jpg) left bottom / 100% no-repeat; height: 400px;" data-height-xl="700" data-height-lg="700" data-height-md="450" data-height-sm="450" data-height-xs="450">
+            <div class="container clearfix">
+                <div class="row clearfix">
+                    <div class="col-lg-7 offset-lg-5">
+                        <div class="topmargin-lg d-none d-lg-block"></div>
+                        <div class="topmargin-lg d-none d-lg-block"></div>
+                        <div class="emphasis-title bottommargin-sm">
+                            <h2 style="font-size: 42px;" class="font-body ls1 t400">Re-diseño Web</h2>
+                        </div>
+                        <p class="lead">Tener una buena imagen online es muy importante, CreativosPlus se encarga de darte la imagen innovadora que necesitas, con las mejores tecnologías del mercado.</p>
+                        <a class="btn-verde button button-3d button-reveal button-xlarge tright button-rounded" href="" data-scrollto="#footer" data-offset="160" data-easing="easeInOutExpo" data-speed="1200">
+                            <i class="icon-line-arrow-right"></i>
+                            <span>Contáctanos</span>
+                        </a>
                     </div>
-                    <p class="lead text-justify  d-block d-sm-none">Tener una buena imagen online es muy importante, CreativosPlus se encarga de darte la imagen innovadora que necesitas, con las mejores tecnologías del mercado.</p>
-                    <p class="lead text-justify container  d-sm-block d-none ">Tener una buena imagen online es muy importante, CreativosPlus se encarga de darte la imagen innovadora que necesitas, con las mejores tecnologías del mercado.</p>
-                    <a class="btn-verde button button-3d button-reveal button-xlarge tright button-rounded" href="" data-scrollto="#footer" data-offset="160" data-easing="easeInOutExpo" data-speed="1200">
-                        <i class="icon-line-arrow-right"></i>
-                        <span>Contáctanos</span>
-                    </a>
                 </div>
+            </div>
+            <div class="video-wrap" style="position: absolute; height: 100%; z-index: 1;">
+                <div class="video-overlay d-none d-lg-block" style="background: url('images/servicios/web/3-3.png') no-repeat left top; background-size: auto 100%;" data-animate="fadeInLeft"></div>
             </div>
         </div>
     </section>
