--- a/index.html
+++ b/index.html
@@ -489,8 +489,8 @@
 							<span class="texto-blanco t300">La <strong>identidad</strong> de tu negocio te espera.</span>
 						</div>
                     </div>
-                    <div class="col-lg-3 col-sm-3 mt-3">
-                        <a class="btn-verde button button-3d button-reveal button-xlarge tright button-rounded" href="" data-scrollto="#footer" data-offset="160" data-easing="easeInOutExpo" data-speed="1200">
+                    <div class="col-lg-3  mt-3">
+                        <a class="btn-verde button button-3d button-reveal button-large tright button-rounded" href="" data-scrollto="#footer" data-offset="160" data-easing="easeInOutExpo" data-speed="1200">
                             <i class="icon-line-arrow-right"></i>
                             <span>Contáctanos</span>
                         </a>
@@ -570,8 +570,8 @@
         <div class="section nomargin noborder bg-azul" id="promoBox2" style="padding: 60px 0 15px 0;">
             <div class="container clearfix">
                 <div class="row">
-                    <div class="col-lg-3 mt-3">
-                        <a class="btn-verde button button-3d button-reveal button-xlarge tright button-rounded" href="" data-scrollto="#footer" data-offset="160" data-easing="easeInOutExpo" data-speed="1200">
+                    <div class="d-none d-sm-block col-lg-3 mt-3">
+                        <a class="btn-verde button button-3d button-reveal button-large tright button-rounded" href="" data-scrollto="#footer" data-offset="160" data-easing="easeInOutExpo" data-speed="1200">
                             <i class="icon-line-arrow-right"></i>
                             <span>Contáctanos</span>
                         </a>
@@ -676,7 +676,7 @@
                         </div>
                     </div>
                     <div class="col-lg-3 mt-3">
-                        <a class="btn-azul button button-dark button-3d button-reveal button-xlarge tright button-rounded" href="" data-scrollto="#footer" data-offset="160" data-easing="easeInOutExpo" data-speed="1200">
+                        <a class="btn-azul button button-dark button-3d button-reveal button-large tright button-rounded" href="" data-scrollto="#footer" data-offset="160" data-easing="easeInOutExpo" data-speed="1200">
                             <i class="icon-line-arrow-right"></i>
                             <span>Contáctanos</span>
                         </a>
