--- a/nosotros.html
+++ b/nosotros.html
@@ -358,10 +358,10 @@
                   <p class="lead text-justify">En CreativosPlus construimos <strong>sitios web</strong> de alta calidad, con diseños únicos, innovadores y amigables para tus clientes. Somos ese PLUS que hará de tu sitio web una solución efectiva a tu estrategia digital.</p>
                   <a class="btn-verde button button-3d button-reveal button-xlarge tright button-rounded" href="" data-scrollto="#footer" data-offset="160" data-easing="easeInOutExpo" data-speed="1200">
                      <i class="icon-line-arrow-right"></i>
-                     <span>Contáctanos</span>
+                     <span>Conocenos</span>
                   </a>
                </div>
-               <div class="col-lg-6 col-sm-4">
+               <div class="col-lg-6 ">
                   <img src="images/nosotros/3..jpg" style="position: relative; top: 50px; " data-animate="fadeInRight" data-delay="100" alt="Nosotros">
                </div>
             </div>
@@ -425,7 +425,7 @@
                         <h2>Nuestra Misión</h2>
                   </div>
                   <p class="lead text-justify">Ayudar a las personas que confíen en nosotros a encontrar la <strong>identidad</strong> en su negocio y poder brindarle apoyo a cada persona a nivel internacional </p>
-                  <a class="fright btn-verde button button-3d button-reveal button-xlarge tright button-rounded" href="" data-scrollto="#footer" data-offset="160" data-easing="easeInOutExpo" data-speed="1200">
+                  <a class=" btn-verde button button-3d button-reveal button-xlarge tright button-rounded" href="" data-scrollto="#footer" data-offset="160" data-easing="easeInOutExpo" data-speed="1200">
                      <i class="icon-line-arrow-right"></i>
                      <span>Contáctanos</span>
                   </a>
