--- a/us/index.html
+++ b/us/index.html
@@ -113,7 +113,7 @@
                     <a href="index.html" class="standard-logo" data-sticky-logo="../images/logos/logo.png">
                         <img style="margin-right:50px" src="../images/logos/logoblanco.png" alt="CreativosPlus">
                     </a>
-                    <a href="index.html" class="retina-logo" data-sticky-logo="images/logos/logo.png">
+                    <a href="index.html" class="retina-logo" data-sticky-logo="../images/logos/logo.png">
                         <img  src="../images/logos/home.png" alt="CreativosPlus">
                     </a>
                 </div>
@@ -489,7 +489,7 @@
 							<span class="texto-blanco t300">The identity of your business awaits you.</span>
 						</div>
                     </div>
-                    <div class="col-lg-3 col-sm-4 mt-3 ">
+                    <div class=" col-lg-3 col-sm-4 mt-3 ">
                         <a class="btn-verde button button-3d button-reveal button-xlarge tright button-rounded" href="" data-scrollto="#footer" data-offset="160" data-easing="easeInOutExpo" data-speed="1200"  >
                             <i class="icon-line-arrow-right"></i>
                             <span class="">Learn more</span>
@@ -571,7 +571,7 @@
         <div class="section nomargin noborder bg-azul" id="promoBox2" style="padding: 60px 0 15px 0;">
             <div class="container clearfix">
                 <div class="row">
-                    <div class="col-lg-3 mt-3">
+                    <div class="d-none d-sm-block col-lg-3 mt-3">
                         <a class="btn-verde button button-3d button-reveal button-xlarge tright button-rounded" href="" data-scrollto="#footer" data-offset="160" data-easing="easeInOutExpo" data-speed="1200">
                             <i class="icon-line-arrow-right"></i>
                             <span>Contact Us</span>
