--- a/us/nosotros.html
+++ b/us/nosotros.html
@@ -115,7 +115,7 @@
                   <a href="index.html" class="standard-logo" data-sticky-logo="../images/logos/logo.png">
                      <img style="margin-right:50px" src="../images/logos/logoblanco.png" alt="CreativosPlus">
                   </a>
-                  <a href="index.html" class="retina-logo" data-sticky-logo="images/logos/home.png">
+                  <a href="index.html" class="retina-logo" data-sticky-logo="../images/logos/home.png">
                      <img src="../images/logos/home.png" alt="CreativosPlus">
                  </a>
               </div>
@@ -356,12 +356,12 @@
                      <h2>Know more about us</h2>
                   </div>
                   <p class="lead text-justify">In CreativosPlus we build high quality websites, with unique designs, innovative and friendly to your customers. We are that PLUS that will make your website an effective solution to your digital strategy.</p>
-                  <a class="btn-verde button button-3d button-reveal button-xlarge tright button-rounded" href="" data-scrollto="#footer" data-offset="160" data-easing="easeInOutExpo" data-speed="1200">
+                  <a class="btn-verde button button-3d button-reveal button-large tright button-rounded" href="" data-scrollto="#footer" data-offset="160" data-easing="easeInOutExpo" data-speed="1200">
                      <i class="icon-line-arrow-right"></i>
                      <span>Contact Us</span>
                   </a>
                </div>
-               <div class="col-lg-6 col-sm-4">
+               <div class="col-lg-6 ">
                   <img src="../images/nosotros/3..jpg" style="position: relative; top: 50px; " data-animate="fadeInRight" data-delay="100" alt="Us">
                </div>
             </div>
@@ -425,7 +425,7 @@
                         <h2>Our mission</h2>
                   </div>
                   <p class="lead text-justify">Helping people who trust us to find identity in their business and be able to support each person internationally.</p>
-                  <a class="fright btn-verde button button-3d button-reveal button-xlarge tright button-rounded" href="" data-scrollto="#footer" data-offset="160" data-easing="easeInOutExpo" data-speed="1200">
+                  <a class=" btn-verde button button-3d button-reveal button-large tright button-rounded" href="" data-scrollto="#footer" data-offset="160" data-easing="easeInOutExpo" data-speed="1200">
                      <i class="icon-line-arrow-right"></i>
                      <span>Contact Us</span>
                   </a>
