--- a/diseno-grafico.html
+++ b/diseno-grafico.html
@@ -336,10 +336,10 @@
         <div class="container clearfix">
             <div id="section-nextgen" class="page-section bottommargin-lg topmargin">
                 <div class="row clearfix">
-                    <div class="col-lg-5 center">
+                    <div class="col-lg-6">
                         <img src="images/servicios/DISEÑO/1.png" alt="Logotipos" data-animate="fadeInLeft">
                     </div>
-                    <div class="col-lg-7">
+                    <div class="col-lg-6">
                         <div class="topmargin-lg d-none d-lg-block"></div>
                         <div class="emphasis-title bottommargin-sm">
                             <h2 style="font-size: 42px;" class="font-body ls1 t500">Logotipos</h2>
@@ -356,7 +356,7 @@
             <div class="clear"></div>
             <div id="section-stunning-graphics" class="page-section topmargin bottommargin-lg">
                 <div class="row clearfix">
-                    <div class="col-lg-7">
+                    <div class="col-lg-6">
                         <div class="topmargin-lg d-none d-lg-block"></div>
                         <div class="emphasis-title bottommargin-sm">
                             <h2 style="font-size: 42px;" class="font-body ls1 t400">Identidad Corporativa</h2>
@@ -367,31 +367,33 @@
                             <span>Contáctanos</span>
                         </a>
                     </div>
-                    <div class="col-lg-5 center">
-                        <img style="margin-top: 70px;" src="images/servicios/DISEÑO/2.png" alt="Identidad" data-animate="fadeInRight">
+                    <div class="col-lg-6 ">
+                        <img  src="images/servicios/DISEÑO/2.png" alt="Identidad" data-animate="fadeInRight">
+                    </div>
+                </div>
+                <div class="line"></div>
+            </div>
+        </div>
+        <div class="clear"></div>
+        <div id="section-secured-solutions" class="nomargin page-section section nopadding " style="background: url(images/3.jpg) left bottom / 100% no-repeat; height: 400px;" data-height-xl="500" data-height-lg="500" data-height-md="450" data-height-sm="400" data-height-xs="600">
+            <div class="container clearfix">
+                <div class="row clearfix">
+                    <div class="col-lg-7 offset-lg-5 ">
+                        <div class="topmargin-lg d-none d-lg-block"></div>
+                        <div class="topmargin-lg d-none d-lg-block"></div>
+                        <div class="emphasis-title bottommargin-sm">
+                            <h2 style="font-size: 42px;" class="font-body ls1 t400">Videos y Animación</h2>
+                        </div>
+                        <p class="lead">Nos encargamos de crear una comunicación efectiva mediante creaciones de personajes, dibujos y elementos decorativos de alto impacto obteniendo el mejor resultado.</p>
+                        <a class="btn-verde button button-3d button-reveal button-xlarge tright button-rounded" href="" data-scrollto="#footer" data-offset="160" data-easing="easeInOutExpo" data-speed="1200">
+                            <i class="icon-line-arrow-right"></i>
+                            <span>Contáctanos</span>
+                        </a>
                     </div>
                 </div>
             </div>
-            <div class="line"></div>
-            <div class="clear"></div>
-        </div>
-        <div id="section-nextgen" class="page-section  topmargin" style="background: url('images/3.jpg') no-repeat top center; background-size: cover; padding: 80px 0 70px;">
-            <div class="row clearfix">
-                <div class="col-lg-5 center">
-                    <img src="images/servicios/DISEÑO/3-3.png" alt="diseño grafico" data-animate="fadeInLeft">
-                </div>
-                <div class="col-lg-7 container clearfix ">
-                    <div class="topmargin-lg d-none d-lg-block"></div>
-                    <div class="emphasis-title bottommargin-sm">
-                        <h2 style="font-size: 42px;" class="font-body ls1 t500">Videos y Animación</h2>
-                    </div>
-                    <p class="lead text-justify  d-block d-sm-none">Nos encargamos de crear una comunicación efectiva mediante creaciones de personajes, dibujos y elementos decorativos de alto impacto obteniendo el mejor resultado para vender su marca.</p>
-                    <p class="lead text-justify container d-sm-block d-none ">Nos encargamos de crear una comunicación efectiva mediante creaciones de personajes, dibujos y elementos decorativos de alto impacto obteniendo el mejor resultado para vender su marca.</p>
-                    <a class="btn-verde button button-3d button-reveal button-xlarge tright button-rounded" href="" data-scrollto="#footer" data-offset="160" data-easing="easeInOutExpo" data-speed="1200">
-                        <i class="icon-line-arrow-right"></i>
-                        <span>Contáctanos</span>
-                    </a>
-                </div>
+            <div class="video-wrap" style="position: absolute; height: 95%; z-index: 1;">
+                <div class="video-overlay d-none d-lg-block" style="background: url('images/servicios/DISEÑO/3-3.png') no-repeat left top; background-size: auto 100%;" data-animate="fadeInLeft"></div>
             </div>
         </div>
        
