--- a/us/diseno-grafico.html
+++ b/us/diseno-grafico.html
@@ -341,10 +341,10 @@
                     <div class="col-lg-7">
                         <div class="topmargin-lg d-none d-lg-block"></div>
                         <div class="emphasis-title bottommargin-sm">
-                            <h2 style="font-size: 42px;" class="font-body ls1 t500">Logos</h2>
+                            <h2 style="font-size: 42px !important;" class="font-body ls1 t400">Logos</h2>
                         </div>
                         <p class="lead text-justify">We know that this is the most important part of your business, your corporate image and creative to the world, Creativosplus manages to find your identity with a custom design.</p>
-                        <a class="btn-verde button button-3d button-reveal button-xlarge tright button-rounded" href="" data-scrollto="#footer" data-offset="160" data-easing="easeInOutExpo" data-speed="1200">
+                        <a class="btn-verde button button-3d button-reveal button-large tright button-rounded" href="" data-scrollto="#footer" data-offset="160" data-easing="easeInOutExpo" data-speed="1200">
                             <i class="icon-line-arrow-right"></i>
                             <span>Contact Us</span>
                         </a>
@@ -358,10 +358,10 @@
                     <div class="col-lg-7">
                         <div class="topmargin-lg d-none d-lg-block"></div>
                         <div class="emphasis-title bottommargin-sm">
-                            <h2 style="font-size: 42px;" class="font-body ls1 t400">Corporate Identity</h2>
+                            <h2 style="font-size: 42px ;" class="font-body ls1 t400">Corporate Identity</h2>
                         </div>
                         <p class="lead text-justify">We transmit by means of physical and digital components the concept of your business, with your corporate identity we will achieve to give value to your brand.</p>
-                        <a class="btn-verde button button-3d button-reveal button-xlarge tright button-rounded" href="" data-scrollto="#footer" data-offset="160" data-easing="easeInOutExpo" data-speed="1200">
+                        <a class="btn-verde button button-3d button-reveal button-large tright button-rounded" href="" data-scrollto="#footer" data-offset="160" data-easing="easeInOutExpo" data-speed="1200">
                             <i class="icon-line-arrow-right"></i>
                             <span>Contact Us</span>
                         </a>
@@ -370,27 +370,29 @@
                         <img src="../images/servicios/DISEÑO/2.png" alt="Phone" data-animate="fadeInRight">
                     </div>
                 </div>
+                <div class="line"></div>
             </div>
-            <div class="line"></div>
-            <div class="clear"></div>
         </div>
-        <div id="section-nextgen" class="page-section  topmargin" style="background: url('../images/3.jpg') no-repeat top center; background-size: cover; padding: 80px 0 70px;">
-            <div class="row clearfix">
-                <div class="col-lg-5 ">
-                    <img src="../images/servicios/DISEÑO/3-3.png" alt="NextGen Framework" data-animate="fadeInLeft">
-                </div>
-                <div class="col-lg-7 container">
-                    <div class="topmargin-lg d-none d-lg-block"></div>
-                    <div class="emphasis-title bottommargin-sm">
-                        <h2 style="font-size: 42px;" class="font-body ls1 t500">Videos y Animación</h2>
+        <div class="clear"></div>
+        <div id="section-secured-solutions" class="nomargin page-section section nopadding topmargin-sm" style="background: url('../images/3.jpg') left bottom / 100% no-repeat; /* height: 500px !important;*/" data-height-xl="700" data-height-lg="700" data-height-md="450" data-height-sm="550" data-height-xs="550">
+            <div class="container clearfix">
+                <div class="row clearfix">
+                    <div class="col-lg-7 offset-lg-5">
+                        <div class="topmargin-lg d-none d-lg-block"></div>
+                        <div class="topmargin-lg d-none d-lg-block"></div>
+                        <div class="emphasis-title bottommargin-sm">
+                            <h2 style="font-size: 42px;" class="font-body ls1 t400">Videos & animation</h2>
+                        </div>
+                        <p class="lead">We take charge of creating an effective communication by means of creations of characters, drawings and decorative elements of high impact obtaining the best result to sell your brand.</p>
+                        <a class="btn-verde button button-3d button-reveal button-large tright button-rounded" href="" data-scrollto="#footer" data-offset="160" data-easing="easeInOutExpo" data-speed="1200">
+                            <i class="icon-line-arrow-right"></i>
+                            <span>Contact Us</span>
+                        </a>
                     </div>
-                    <p class="lead text-justify  d-block d-sm-none">We take charge of creating an effective communication by means of creations of characters, drawings and decorative elements of high impact obtaining the best result to sell your brand.</p>
-                    <p class="lead text-justify container d-sm-block d-none ">We take charge of creating an effective communication by means of creations of characters, drawings and decorative elements of high impact obtaining the best result to sell your brand.</p>
-                    <a class="btn-verde button button-3d button-reveal button-xlarge tright button-rounded" href="" data-scrollto="#footer" data-offset="160" data-easing="easeInOutExpo" data-speed="1200">
-                        <i class="icon-line-arrow-right"></i>
-                        <span>Contact Us</span>
-                    </a>
                 </div>
+            </div>
+            <div class="video-wrap" style="position: absolute; height: 95%; z-index: 1;">
+                <div class="video-overlay d-none d-lg-block" style="background: url('../images/servicios/DISEÑO/3-3.png') no-repeat left top; background-size: auto 100%;" data-animate="fadeInLeft"></div>
             </div>
         </div>
     </section>
