--- a/us/diseno-web.html
+++ b/us/diseno-web.html
@@ -112,7 +112,7 @@
                     <a href="index.html" class="standard-logo" data-sticky-logo="../images/logos/logo.png">
                         <img style="margin-right:50px" src="../images/logos/logoblanco.png" alt="CreativosPlus">
                     </a>
-                    <a href="index.html" class="retina-logo" data-sticky-logo="images/logos/home.png">
+                    <a href="index.html" class="retina-logo" data-sticky-logo="../images/logos/home.png">
                         <img src="../images/logos/home.png" alt="CreativosPlus">
                     </a>
                 </div>
@@ -335,16 +335,16 @@
         <div class="container clearfix">
             <div id="section-nextgen" class="page-section bottommargin-lg topmargin">
                 <div class="row clearfix">
-                    <div class="col-lg-5 center">
+                    <div class="col-lg-6 center">
                         <img src="../images/servicios/WEB/4.png" alt="NextGen Framework" data-animate="fadeInLeft">
                     </div>
-                    <div class="col-lg-7">
+                    <div class="col-lg-6">
                         <div class="topmargin-lg d-none d-lg-block"></div>
                         <div class="emphasis-title bottommargin-sm">
-                            <h2 style="font-size: 42px;" class="font-body ls1 t500">Web Design for Companies</h2>
+                            <h2 style="font-size: 42px;" class="font-body ls1 t400">Web Design for Companies</h2>
                         </div>
                         <p class="lead text-justify">We design and create internet presence effectively with your corporate image, taking into account your business objectives.</p>
-                        <a class="btn-verde button button-3d button-reveal button-xlarge tright button-rounded" href="" data-scrollto="#footer" data-offset="160" data-easing="easeInOutExpo" data-speed="1200">
+                        <a class="btn-verde button button-3d button-reveal button-large tright button-rounded" href="" data-scrollto="#footer" data-offset="160" data-easing="easeInOutExpo" data-speed="1200">
                             <i class="icon-line-arrow-right"></i>
                             <span>Contact Us</span>
                         </a>
@@ -361,7 +361,7 @@
                             <h2 style="font-size: 42px;" class="font-body ls1 t400">E-Commerce</h2>
                         </div>
                         <p class="lead text-justify">We take your physical store to the online world with the best options in the market, no matter if your business is small or large, we create effective solutions for your business or company.</p>
-                        <a class="btn-verde button button-3d button-reveal button-xlarge tright button-rounded" href="" data-scrollto="#footer" data-offset="160" data-easing="easeInOutExpo" data-speed="1200">
+                        <a class="btn-verde button button-3d button-reveal button-large tright button-rounded" href="" data-scrollto="#footer" data-offset="160" data-easing="easeInOutExpo" data-speed="1200">
                             <i class="icon-line-arrow-right"></i>
                             <span>Contact Us</span>
                         </a>
@@ -370,26 +370,29 @@
                         <img src="../images/servicios/WEB/2.png" alt="phone" data-animate="fadeInRight">
                     </div>
                 </div>
+                <div class="line"></div>
             </div>
         </div>
-        <div class="line"></div>
         <div class="clear"></div>
-        <div id="section-nextgen" class="page-section " style="background: url('../images/3.jpg') no-repeat top center; background-size: cover; padding: 80px 0 70px;">
-            <div class="row clearfix">
-                <div class="col-lg-6 center">
-                    <img src="../images/servicios/WEB/3-3.png" alt="NextGen Framework" data-animate="fadeInLeft">
-                </div>
-                <div class="col-lg-6 container clearfix ">
+        <div id="section-secured-solutions" class="nomargin page-section section nopadding topmargin-sm" style="background: url(../images/3.jpg) left bottom / 100% no-repeat; height: 400px;" data-height-xl="700" data-height-lg="700" data-height-md="450" data-height-sm="450" data-height-xs="450">
+            <div class="container clearfix">
+                <div class="row clearfix">
+                    <div class="col-lg-6 offset-lg-6">
+                        <div class="topmargin-lg d-none d-lg-block"></div>
+                        <div class="topmargin-lg d-none d-lg-block"></div>
                         <div class="emphasis-title bottommargin-sm">
-                            <h2 style="font-size: 42px;" class="font-body ls1 t500">Web Re-design</h2>
+                            <h2 style="font-size: 42px;" class="font-body ls1 t400">Web Re-design</h2>
                         </div>
-                        <p class="lead text-justify  d-block d-sm-none">Having a good online image is very important, CreativosPlus is in charge of giving you the innovative image you need, with the best technologies on the market.</p>
-                        <p class="lead text-justify container  d-sm-block d-none ">Having a good online image is very important, CreativosPlus is in charge of giving you the innovative image you need, with the best technologies on the market.</p>
-                        <a class="btn-verde button button-3d button-reveal button-xlarge tright button-rounded" href="" data-scrollto="#footer" data-offset="160" data-easing="easeInOutExpo" data-speed="1200">
+                        <p class="lead">Having a good online image is very important, CreativosPlus is in charge of giving you the innovative image you need, with the best technologies on the market.</p>
+                        <a class="btn-verde button button-3d button-reveal button-large tright button-rounded" href="" data-scrollto="#footer" data-offset="160" data-easing="easeInOutExpo" data-speed="1200">
                             <i class="icon-line-arrow-right"></i>
                             <span>Contact Us</span>
                         </a>
+                    </div>
                 </div>
+            </div>
+            <div class="video-wrap" style="position: absolute; height: 100%; z-index: 1;">
+                <div class="video-overlay d-none d-lg-block" style="background: url('../images/servicios/WEB/3-3.png') no-repeat left top; background-size: auto 100%;" data-animate="fadeInLeft"></div>
             </div>
         </div>
     </section>
