--- a/us/marketing.html
+++ b/us/marketing.html
@@ -341,10 +341,10 @@
                     <div class="col-lg-7">
                         <div class="topmargin-lg d-none d-lg-block"></div>
                         <div class="emphasis-title bottommargin-sm">
-                            <h2 style="font-size: 42px;" class="font-body ls1 t500">Marketing Campaigns</h2>
+                            <h2 style="font-size: 42px;" class="font-body ls1 t400">Marketing Campaigns</h2>
                         </div>
                         <p class="lead text-justify">We seek to become your best ally, with us you can find all the necessary tools for your brand to reach all your potential customers through different digital media.</p>
-                        <a class="btn-verde button button-3d button-reveal button-xlarge tright button-rounded" href="" data-scrollto="#footer" data-offset="160" data-easing="easeInOutExpo" data-speed="1200">
+                        <a class="btn-verde button button-3d button-reveal button-large tright button-rounded" href="" data-scrollto="#footer" data-offset="160" data-easing="easeInOutExpo" data-speed="1200">
                             <i class="icon-line-arrow-right"></i>
                             <span>Contact Us</span>
                         </a>
@@ -361,7 +361,7 @@
                             <h2 style="font-size: 42px;" class="font-body ls1 t400">Social Media</h2>
                         </div>
                         <p class="lead text-justify">Your potential customers are on the net, that's why your brand must be too. CreativosPlus seeks to transmit the DNA of your brand in the most important digital platforms, creating strategies and value ads to position your brand and create an active community.</p>
-                        <a class="btn-verde button button-3d button-reveal button-xlarge tright button-rounded" href="" data-scrollto="#footer" data-offset="160" data-easing="easeInOutExpo" data-speed="1200">
+                        <a class="btn-verde button button-3d button-reveal button-large tright button-rounded" href="" data-scrollto="#footer" data-offset="160" data-easing="easeInOutExpo" data-speed="1200">
                             <i class="icon-line-arrow-right"></i>
                             <span>Contact Us</span>
                         </a>
@@ -370,27 +370,29 @@
                         <img src="../images/servicios/MARKETING/2.png" alt="Stunning Graphics" data-animate="fadeInRight">
                     </div>
                 </div>
+                <div class="line"></div>
             </div>
         </div> 
-        <div class="line"></div>
         <div class="clear"></div>
-        <div id="section-nextgen" class="page-section  " style="background: url('../images/3.jpg') no-repeat top center; background-size: cover; padding: 80px 0 70px;">
-            <div class="row clearfix">
-                <div class="col-lg-6 ">
-                    <img class="d-sm-block d-none " src="../images/servicios/marketing/3-3.png" alt="identidad Web" data-animate="fadeInLeft" style="position: absolute; margin-top:-300px;">
-                    <img class="d-block d-sm-none" src="../images/servicios/marketing/3-3.png" alt="identidad Web" data-animate="fadeInLeft" >
-                </div>
-                <div class="col-lg-6 container rclearfix ">
-                    <div class="emphasis-title bottommargin-sm">
-                        <h2 style="font-size: 42px;" class="font-body ls1 t500">Branding</h2>
+        <div id="section-secured-solutions" class="nomargin page-section section nopadding topmargin-sm" style="background: url(../images/3.jpg) left bottom / 100% no-repeat; height: 400px;" data-height-xl="700" data-height-lg="700" data-height-md="450" data-height-sm="450" data-height-xs="450">
+            <div class="container clearfix">
+                <div class="row clearfix">
+                    <div class="col-lg-6 offset-lg-6">
+                        <div class="topmargin-lg d-none d-lg-block"></div>
+                        <div class="topmargin-lg d-none d-lg-block"></div>
+                        <div class="emphasis-title bottommargin-sm">
+                            <h2 style="font-size: 42px;" class="font-body ls1 t400">Branding</h2>
+                        </div>
+                        <p class="lead">We design a measurement strategy according to your business objectives, knowing where your most active clients are.</p>
+                        <a class="btn-verde button button-3d button-reveal button-large tright button-rounded" href="" data-scrollto="#footer" data-offset="160" data-easing="easeInOutExpo" data-speed="1200">
+                            <i class="icon-line-arrow-right"></i>
+                            <span>Contact Us</span>
+                        </a>
                     </div>
-                    <p class="lead text-justify  d-block d-sm-none">We design a measurement strategy according to your business objectives, knowing where your most active clients are.</p>
-                    <p class="lead text-justify container  d-sm-block d-none ">We design a measurement strategy according to your business objectives, knowing where your most active clients are.</p>
-                    <a class="btn-verde button button-3d button-reveal button-xlarge tright button-rounded" href="" data-scrollto="#footer" data-offset="160" data-easing="easeInOutExpo" data-speed="1200">
-                        <i class="icon-line-arrow-right"></i>
-                        <span>Contact Us</span>
-                    </a>
                 </div>
+            </div>
+            <div class="video-wrap" style="position: absolute; height: 100%; z-index: 1;">
+                <div class="video-overlay d-none d-lg-block" style="background: url('../images/servicios/marketing/3-3.png') no-repeat left top; background-size: auto 100%;" data-animate="fadeInLeft"></div>
             </div>
         </div>
     </section>
