--- a/us/seo.html
+++ b/us/seo.html
@@ -335,16 +335,16 @@
         <div class="container clearfix">
             <div id="section-nextgen" class="page-section bottommargin-lg topmargin">
                 <div class="row clearfix">
-                    <div class="col-lg-5 center">
+                    <div class="col-lg-6 center">
                         <img src="../images/servicios/SEO/1.png" alt="NextGen Framework" data-animate="fadeInLeft">
                     </div>
-                    <div class="col-lg-7">
+                    <div class="col-lg-6">
                         <div class="topmargin-lg d-none d-lg-block"></div>
                         <div class="emphasis-title bottommargin-sm">
                             <h2 style="font-size: 42px;" class="font-body ls1 t500">Optimization</h2>
                         </div>
                         <p class="lead">We optimize your website taking into account the necessary HTML tags for your text and images.</p>
-                        <a class="btn-verde button button-3d button-reveal button-xlarge tright button-rounded" href="" data-scrollto="#footer" data-offset="160" data-easing="easeInOutExpo" data-speed="1200">
+                        <a class="btn-verde button button-3d button-reveal button-large tright button-rounded" href="" data-scrollto="#footer" data-offset="160" data-easing="easeInOutExpo" data-speed="1200">
                             <i class="icon-line-arrow-right"></i>
                             <span>Contact Us</span>
                         </a>
@@ -355,18 +355,18 @@
             <div class="clear"></div>
             <div id="section-stunning-graphics" class="page-section topmargin bottommargin-lg">
                 <div class="row clearfix">
-                    <div class="col-lg-7">
+                    <div class="col-lg-6">
                         <div class="topmargin-lg d-none d-lg-block"></div>
                         <div class="emphasis-title bottommargin-sm">
                             <h2 style="font-size: 42px;" class="font-body ls1 t400">Keywords</h2>
                         </div>
                         <p class="lead">We develop a positioning strategy, choosing keywords that your business or company needs.</p>
-                        <a class="btn-verde button button-3d button-reveal button-xlarge tright button-rounded" href="" data-scrollto="#footer" data-offset="160" data-easing="easeInOutExpo" data-speed="1200">
+                        <a class="btn-verde button button-3d button-reveal button-large tright button-rounded" href="" data-scrollto="#footer" data-offset="160" data-easing="easeInOutExpo" data-speed="1200">
                             <i class="icon-line-arrow-right"></i>
                             <span>Contact Us</span>
                         </a>
                     </div>
-                    <div class="col-lg-5 center">
+                    <div class="col-lg-6 center">
                         <img src="../images/servicios/SEO/2.png" alt="Stunning Graphics" data-animate="fadeInRight">
                     </div>
                 </div>
@@ -377,14 +377,14 @@
         <div id="section-secured-solutions" class="nomargin page-section section nopadding topmargin-sm" style="background: url(../images/3.jpg) left bottom / 100% no-repeat; height: 400px;" data-height-xl="700" data-height-lg="700" data-height-md="450" data-height-sm="450" data-height-xs="450">
             <div class="container clearfix">
                 <div class="row clearfix">
-                    <div class="col-lg-7 offset-lg-5">
+                    <div class="col-lg-6 offset-lg-6">
                         <div class="topmargin-lg d-none d-lg-block"></div>
                         <div class="topmargin-lg d-none d-lg-block"></div>
                         <div class="emphasis-title bottommargin-sm">
                             <h2 style="font-size: 42px;" class="font-body ls1 t400">Linkbuilding</h2>
                         </div>
                         <p class="lead">In order to improve the optimization, internal and external links of hierarchy are created obtaining quality in the navigation and results of the web site.</p>
-                        <a class="btn-verde button button-3d button-reveal button-xlarge tright button-rounded" href="" data-scrollto="#footer" data-offset="160" data-easing="easeInOutExpo" data-speed="1200">
+                        <a class="btn-verde button button-3d button-reveal button-large tright button-rounded" href="" data-scrollto="#footer" data-offset="160" data-easing="easeInOutExpo" data-speed="1200">
                             <i class="icon-line-arrow-right"></i>
                             <span>Contact Us</span>
                         </a>
